Continued implementation of cache, still with some problems